<resources>
    <string name="app_name">BrainTrainer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Start">Button</string>
    <string name="start">Start</string>
    <string name="_60s">60s</string>
    <string name="_0_0">0/0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="ready">Ready?</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="game_ended">Game ended</string>
    <string name="play_again">Play again</string>
    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="records">Records</string>
    <string name="_0s">0s</string>
    <string name="done">Done!</string>
</resources>